--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.8",
+    "@angular/animations": "^8.2.13",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.8",
     "@angular/compiler": "~8.2.8",
     "@angular/core": "~8.2.8",
+    "@angular/fire": "^5.2.1",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.8",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
+    "firebase": "^7.2.2",
+    "firebaseui": "^4.2.0",
+    "hammerjs": "^2.0.8",
+    "ngx-auth-firebaseui": "^3.4.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
